[project]
name = "askuser"
version = "0.1.2"
description = "Smart and robust CLI input: validated prompts, menu-driven selections, default value support, and smart autocompletion."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Kanad Rishiraj (RoamingSaint)", email = "roamingsaint27@gmail.com"}]
dependencies = [
    "colorfulPyPrint~=0.1",
    "datetimeops~=1.0",
    "prompt_toolkit~=3.0",
    "pycountry~=24.6",
    "string-list~=0.1",
    "tabulate~=0.9",
    "email-validator~=2.2.0"
]
requires-python = ">=3.7"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
